--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NoteDetailActivity">
+    
+    <EditText
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/NoteTitleFont"
+        android:hint="Note's title"/>
+    
+    <EditText
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:hint="Note's text"
+        android:layout_below="@+id/title"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
